LAB1/cloudformation/templates/route_table.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Route Table

Parameters:

  ProjectName:
    Type: String

  VpcID:
    Type: AWS::EC2::VPC::Id

  PublicSubnetID:
    Type: AWS::EC2::Subnet::Id

  PrivateSubnetID:
    Type: AWS::EC2::Subnet::Id

  InternetGatewayID:
    Type: String

  NatGatewayID:
    Type: String
    
Resources: 
  # Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VpcID
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-public-rt"

  PublicRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      RouteTableId: 
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: 
        Ref: InternetGatewayID

  PublicSubnetRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      RouteTableId: 
        Ref: PublicRouteTable
      SubnetId: 
        Ref: PublicSubnetID

  # Private Route Table
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId: 
        Ref: VpcID
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-private-rt"
        
  PrivateRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      RouteTableId: 
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: 
        Ref: NatGatewayID

  PrivateSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      RouteTableId: 
        Ref: PrivateRouteTable
      SubnetId: 
        Ref: PrivateSubnetID

Outputs:

  PublicRouteTableID:
    Description: Public Route Table ID
    Value: 
      Ref: PublicRouteTable

  PrivateRouteTableID:
    Description: Private Route Table ID
    Value:
      Ref: PrivateRouteTable
