LAB1/cloudformation/templates/security_group.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Group module - Public and Private EC2 Security Groups

Parameters:

  ProjectName:
    Type: String

  VpcID:
    Type: AWS::EC2::VPC::Id

  MyIp:
    Type: String
    Description: Your public IP address (without /32)

Resources:
  # Public EC2 Security Group
  PublicEC2SG:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      # GroupName:
      #   Fn::Sub: "${ProjectName}-public-sg"
      GroupDescription: Allow SSH only from admin IP
      VpcId:
        Ref: VpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Fn::Sub: "${MyIp}/32"
          Description: SSH from my IP only
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-public-sg"

  # Private EC2 Security Group
  PrivateEC2SG:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      # GroupName:
      #   Fn::Sub: "${ProjectName}-private-sg"
      GroupDescription: Allow SSH only from Public EC2 Security Group
      VpcId:
        Ref: VpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: PublicEC2SG
          Description: SSH from Public EC2 SG only
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-private-sg"

Outputs:

  PublicSGID:
    Description: Public Security Group ID
    Value:
      Ref: PublicEC2SG

  PrivateSGID:
    Description: Private Security Group ID
    Value:
      Ref: PrivateEC2SG
